# selenium_core

./: LICENSE  config.py  driver.py  exceptions.py  handlers.py  handling.py  pyproject.toml
selenium_core/: __init__.py  config.py  controller.py  driver.py  driver.pyi  handling.py  log.py  types.py  utils.py  wait.py  wait.pyi
selenium_core/tests/: conftest.py  test_integracao.py  test_page.html  test_unitarios.py
