[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-core"
version = "0.1.0"
authors = [
    { name="Kauan Henrique Kaester", email="kauankaestner@gmail.com" },
]
description = "Um framework de automação web construído sobre o Selenium."
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "selenium >= 4.0"
]

[project.urls]
Homepage = "https://github.com/seu-usuario/seu-projeto"  # <-- Link para o seu repositório
"Bug Tracker" = "https://github.com/seu-usuario/seu-projeto/issues"